--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
       "es2017",
       "dom"
     ],
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
   }
 }
